# LCE

./: .clang-format  .gitignore  CMakeLists.txt
.sourcekit-lsp/: config.json
Client/: Client.swift  Window.swift
Client/Render/: Renderer.swift
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractContainerScreen.h  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AbstractTexturePack.cpp  AbstractTexturePack.h  AchievementPopup.cpp  AchievementPopup.h  AchievementScreen.cpp  AchievementScreen.h  AllowAllCuller.cpp  AllowAllCuller.h  ArchiveFile.cpp  ArchiveFile.h  ArrowRenderer.cpp  ArrowRenderer.h  BatModel.cpp  BatModel.h  BatRenderer.cpp  BatRenderer.h  BeaconRenderer.cpp  BeaconRenderer.h  BlazeModel.cpp  BlazeModel.h  BlazeRenderer.cpp  BlazeRenderer.h  BoatModel.cpp  BoatModel.h  BoatRenderer.cpp  BoatRenderer.h  BookModel.cpp  BookModel.h  BossMobGuiInfo.cpp  BossMobGuiInfo.h  BreakingItemParticle.cpp  BreakingItemParticle.h  BubbleParticle.cpp  BubbleParticle.h  BufferedImage.cpp  BufferedImage.h  (+527 more)
Minecraft.Client/Common/: App_Defines.h  App_enums.h  App_structs.h  BuildVer.h  C4JMemoryPool.h  C4JMemoryPoolAllocator.h  ConsoleGameMode.cpp  ConsoleGameMode.h  Console_Awards_enum.h  Console_Debug_enum.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h  Minecraft_Macros.h  Potion_Macros.h  TelemetryEnum.h
Minecraft.Client/Durango/: ApplicationView.cpp  ApplicationView.h  Durango_App.cpp  Durango_App.h  Durango_Minecraft.cpp  Durango_UIController.cpp  Durango_UIController.h  PresenceIds.h  XboxGameMode.cpp  XboxGameMode.h  Xbox_Awards_enum.h
Minecraft.Client/Orbis/: Minecraft_Macros.h  Orbis_App.cpp  Orbis_App.h  Orbis_Minecraft.cpp  Orbis_PlayerUID.cpp  Orbis_PlayerUID.h  Orbis_UIController.cpp  Orbis_UIController.h  ps4__np_conf.h  user_malloc.cpp  user_malloc_for_tls.cpp  user_new.cpp
Minecraft.Client/PS3/: PS3_App.cpp  PS3_App.h  PS3_Minecraft.cpp  PS3_PlayerUID.cpp  PS3_PlayerUID.h  PS3_UIController.cpp  PS3_UIController.h  Xbox_BuildVer.h  Xbox_Debug_enum.h  Xbox_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_PlayerUID.cpp  PSVita_PlayerUID.h  PSVita_UIController.cpp  PSVita_UIController.h
Minecraft.Client/Windows64/: Minecraft_Macros.h  Resource.h  Windows64_App.cpp  Windows64_App.h  Windows64_Minecraft.cpp  Windows64_UIController.cpp  Windows64_UIController.h
Minecraft.Client/Xbox/: Xbox_App.cpp  Xbox_App.h  Xbox_BuildVer.h  Xbox_Minecraft.cpp  Xbox_UIController.cpp  Xbox_UIController.h
Minecraft.World/: AABB.cpp  AABB.h  Abilities.cpp  Abilities.h  AbsoptionMobEffect.cpp  AbsoptionMobEffect.h  AbstractContainerMenu.cpp  AbstractContainerMenu.h  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  Achievement.cpp  Achievement.h  Achievements.cpp  Achievements.h  AddEntityPacket.cpp  AddEntityPacket.h  AddExperienceOrbPacket.cpp  AddExperienceOrbPacket.h  AddGlobalEntityPacket.cpp  AddGlobalEntityPacket.h  AddIslandLayer.cpp  AddIslandLayer.h  AddMobPacket.cpp  AddMobPacket.h  AddMushroomIslandLayer.cpp  AddMushroomIslandLayer.h  AddPaintingPacket.cpp  AddPaintingPacket.h  AddPlayerPacket.cpp  AddPlayerPacket.h  AddSnowLayer.cpp  AddSnowLayer.h  AdminLogCommand.h  AgableMob.cpp  AgableMob.h  AirTile.cpp  AirTile.h  AmbientCreature.cpp  AmbientCreature.h  Animal.cpp  (+1779 more)
Minecraft.World/x64headers/: extraX64.h
Vulkan/: module.modulemap  vulkan_wrapper.h
World/: Vec3.swift
cmake/: ClientSources.cmake  WorldSources.cmake
res/audio/: ambient_cave_cave1.flac  ambient_cave_cave10.flac  ambient_cave_cave11.flac  ambient_cave_cave12.flac  ambient_cave_cave13.flac  ambient_cave_cave2.flac  ambient_cave_cave3.flac  ambient_cave_cave4.flac  ambient_cave_cave5.flac  ambient_cave_cave6.flac  (+265 more)
(+1016 files in other folders)
